# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.16 2004/02/11 03:31:55 zhen Exp $

  10 Feb 2004; John Davis <zhen@gentoo.org> README, TODO, catalyst,
  modules/builder.py, modules/catalyst_support.py, modules/targets.py,
  targets/grp/grp.sh, targets/livecd-stage1/livecd-stage1.sh,
  targets/livecd-stage2/livecd-stage2.sh, targets/stage1/stage1-chroot.sh,
  targets/stage2/stage2.sh, targets/stage3/stage3.sh,
  targets/tinderbox/tinderbox.sh:
  added envscripts support (fixes bug #39832) massive cleanup of tree to prepare
  it for ebuild - added headers to everything and removed deprecated dirs

  14 Jan 2004; zhen <zhen@gentoo.org> arch/mips.py, modules/targets.py:
  adding Kumba's patches for MIPS

  16 Dec 2003; Guy Martin <gmsoft@gentoo.org> : arch/hppa.py,modules/targets.py :
  Added hppa specific code.

  29 Nov 2003; Daniel Robbins <drobbins@gentoo.org>: Tinderbox target added. See
  tinderbox examples in examples/ dir.
  
  08 Nov 2003; Daniel Robbins <drobbins@gentoo.org>: spec file support integrated
  into catalyst. Use "-f/--file specfile" as argument; see examples dir for examples.
  "grp" target now functional. See examples/x86-grp-20031102.spec for an example of
  how to use it.
 
  08 Nov 2003; Daniel Robbins <drobbins@gentoo.org>: support functions for spec
  file parsing and reading added. Will get added to the code soon.
  
  05 Nov 2003; Daniel Robbins <drobbins@gentoo.org>: Many bug fixes later, things
  seem to be working well for stage1/2/3 so I've added a README.
  
  28 Oct 2003; Daniel Robbins <drobbins@gentoo.org>: Significant rework of code
  structure. Everything is falling nicely into place.
  
  28 Oct 2003; Daniel Robbins <drobbins@gentoo.org>: Exception handling fully-
  integrated into current prototype code.
  
  27 Oct 2003; Daniel Robbins <drobbins@gentoo.org>: beginning of exception