@@ -1,49 +1,0 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage2/Attic/livecd-stage2.sh,v 1.5 2004/02/11 03:31:55 zhen Exp $
-
-case $1 in
-enter)
-	$clst_CHROOT $clst_chroot_path
-	;;
-run)
-	shift
-	numkernels="$1"
-	shift
-	count=0
-	while [ $count -lt $numkernels ]
-	do
-		clst_kname="$1"
-		shift
-		clst_ksource="$1"
-		shift
-		$clst_CHROOT $clst_chroot_path /bin/bash << EOF
-		env-update
-		source /etc/profile
-		if [ -n "${clst_ENVSCRIPT}" ]
-		then
-			source /tmp/envscript
-			rm -f /tmp/envscript
-		fi		
-		export CONFIG_PROTECT="-*"
-		emerge genkernel
-		rm -f /usr/src/linux
-		export USE="-* build"
-		if [ -n "${clst_PKGCACHE}" ]
-		then
-			emerge --usepkg --buildpkg --noreplace $clst_ksource || exit 1
-		else
-			emerge --noreplace $clst_ksource || exit 1
-		fi
-		genkernel --no-bootsplash --kerneldir=/usr/src/linux --kernel-config=/var/tmp/$clst_kname.config --minkernpackage=/tmp/binaries/$clst_kname.tar.bz2 all || exit 1
-		emerge -C genkernel $clst_ksource
-EOF
-		[ $? -ne 0 ] && exit 1
-		count=$(( $count + 1 ))
-	done
-	;;
-*)
-	exit 1
-	;;
-esac
-exit 0
