@@ -1,6 +1,15 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.16 2004/02/11 03:31:55 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.17 2004/02/11 19:12:07 drobbins Exp $
+
+  11 Feb 2004; Daniel Robbins <drobbins@gentoo.org>: removed file for
+  livecd-stage2 target, as this is handled by the runscript now. Added support
+  for "/boot/kernel/foo/use", "/boot/kernel/foo/packages," and made
+  "/boot/kernel/foo/extraversion" an optional rather than required parameter.
+  The aforementioned "packages" is used to specify kernel-related packages
+  (like module ebuilds) to merge with each kernel, and the new "use" option is
+  used to specify the USE settings you'd like exported to the environment
+  during kernel as well as kernel "packages" build.
 
   10 Feb 2004; John Davis <zhen@gentoo.org> README, TODO, catalyst,
   modules/builder.py, modules/catalyst_support.py, modules/targets.py,
